# AgenticOS-ClaudeOpus4.6

./: .gitignore  CLAUDE.md  LICENSE  README.md  benchmark_results.json  benchmark_results.md  pyproject.toml  run_demo.ps1
.claude/rules/: architecture.md  python-style.md  testing.md
.github/workflows/: ci.yml  paper.yml
data/: action_log.jsonl  skill_cache.json
docs/: PRESENTATION.md  presentation.html
paper/: main.tex
recordings/: rl_qtable.json
scripts/: action_logger.py  activate_teams.ps1  clean_teams_cache.py  demo_no_llm.py  dpi_check.py  human_teach.py  launch_demo.ps1  record_demo.py  run_all_demos.py  run_benchmark.py  run_demo_detached.py  run_skill.py  send_email.ps1  skill_cache.py  skill_composer.py  skill_library.py  teams_call.ps1  teams_message.ps1  test_azure.py
src/agenticos/: __init__.py  cli.py  mcp_server.py
src/agenticos/actions/: __init__.py  compositor.py  keyboard.py  mouse.py  shell.py  window.py
src/agenticos/agent/: __init__.py  base.py  demo_optimizer.py  human_supervisor.py  human_teacher.py  navigator.py  planner.py  recovery.py  reinforcement.py  state_validator.py  step_memory.py
src/agenticos/evaluation/: __init__.py  metrics.py  tasks.py
src/agenticos/grounding/: __init__.py  accessibility.py  ocr.py  visual.py
src/agenticos/mcp/: __init__.py  server.py
src/agenticos/observation/: __init__.py  recorder.py  screenshot.py
src/agenticos/utils/: __init__.py  config.py  exceptions.py
tests/: conftest.py
tests/unit/: test_actions.py  test_agent.py  test_evaluation.py  test_grounding.py  test_mcp.py  test_observation.py  test_utils.py
